# rofi-launchers

./: README.md
arch_wiki/: README.md  helper.sh  launcher.sh
book_chooser/: helper.sh  launcher.sh
dunstlog/: helper.py  helper.sh  launcher.sh
gruvbox_palette/: helper.sh  launcher.sh
lxqtnotiflog/: helper.py  helper.sh  launcher.sh
man_viewer/: README.md  launcher.sh
mpv/: README.md  common_utils  mpv_rofi_utils
mpv/playlist_ctl/: append_video.sh  default_config.toml  default_config.yaml  helper.sh  launcher.sh  pyproject.toml
mpv/playlist_ctl/examples/rofi/: append_video.sh  helper.sh  launcher.sh
mpv/playlist_ctl/playlist_ctl/: config.py  default_config.toml  mpv_client.py  pyproject.toml  rofi_client.py  storage.py  utils.py
mpv/playlist_ctl/playlist_ctl/entry_points/: run_playlistctl.py
mpv/playlist_ctl/playlist_ctl/playlist_ctl/: config.py  mpv_client.py  rofi_client.py  rofi_printer.py  storage.py  utils.py
mpv/playlist_ctl/playlist_ctl/playlist_ctl/entry_points/: run_playlistctl.py
mpv/playlist_ctl/tests/: test_storage.py  test_utils.py
mpv/search/: helper.sh  launcher.sh
mpv/video_chooser/: helper.sh  launcher.sh  printer.go
mpv_rofi/: README.md  mpv_rofi_utils
mpv_rofi/playlist_ctl/: append_video.sh  default_config.yaml  helper.sh  launcher.sh
mpv_rofi/pytfeeder/: helper.sh  launcher.sh
palette_picker/: palette
translate/: README.md  launcher.sh
wiki/: README.md  arch_wiki  helper.go  helper.sh  launcher.sh
wikipedia/: helper.go  helper.sh
yt_rofi/: README.md  helper.sh  launcher.sh
zathura/: README.md
(+60 files in other folders)
